[metadata]
name = pg-cert-store
version = 0.0.1
description = Push and pull SSL certs to PostgreSQL
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    pyOpenSSL
    psycopg2
    importlib-metadata; python_version >= "3.6"

[options.entry_points]
console_scripts =
    pg-cert-pull = pg_cert_store.pull:main
    pg-cert-push = pg_cert_store.push:main
