[metadata]
name = pg-cert-store
version = 0.0.1
description = Push and pull SSL certs to PostgreSQL
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    pyOpenSSL
    psycopg2

[options.entry_points]
console_scripts =
    pg-cert-pull = pg_cert_store.pull:main
    pg-cert-push = pg_cert_store.push:main
