[metadata]
name = pg-cert-store
version = 0.0.3
description = Push and pull SSL certs to PostgreSQL
long_description = file: README.md, LICENSE
author = Andrei Costescu
url = https://github.com/cosandr/pg-cert-store
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    cryptography
    psycopg2

[options.entry_points]
console_scripts =
    pg-cert-pull = pg_cert_store.pull:main
    pg-cert-push = pg_cert_store.push:main
